<resources>
    <string name="app_name">HonkaiProjectz2</string>
    <string name="login">Login</string>
<<<<<<< HEAD
    <string name="logout">Logout</string>
    <string name="register">Registrar</string>
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="inventory">Inventário</string>
    <string name="music">Música</string>
    <string name="map">Mapa</string>
    <string name="back">Voltar</string>

    <string-array name="theme">
        <item>Escolha um tema:</item>
        <item>Embers</item>
        <item>Blade</item>
        <item>Golden Hour</item>
        <item>Star Rail</item>
        <item>Space Walk</item>
        <item>Take the Journey</item>
        <item>Conflict Undraped</item>
        <item>Fate</item>
    </string-array>

=======
    <string name="email">Email</string>
    <string name="password">Senha</string>
>>>>>>> 001bb7893a3c1efecaa0965f7bfaf8f8e933c7cd
</resources>