<?xml version="1.0" encoding="utf-8"?>
<<<<<<< HEAD
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
=======
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
>>>>>>> 001bb7893a3c1efecaa0965f7bfaf8f8e933c7cd
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    android:background="@drawable/background"
    tools:context=".views.Register">

    <TextView
        android:id="@+id/txtRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="40sp"
        android:textColor="@color/white"
        android:layout_marginTop="140dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:padding="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:background="@color/white"
        android:hint="@string/email" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="310dp"
        android:padding="10dp"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@color/white"
        android:hint="@string/password" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginEnd="140dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="400dp"
        android:textSize="16sp"/>

</RelativeLayout>
=======
    tools:context=".views.Register">

</androidx.constraintlayout.widget.ConstraintLayout>
>>>>>>> 001bb7893a3c1efecaa0965f7bfaf8f8e933c7cd
