<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
<<<<<<< HEAD
    android:background="@drawable/background"
=======
>>>>>>> 001bb7893a3c1efecaa0965f7bfaf8f8e933c7cd
    tools:context=".views.Login">

    <TextView
        android:id="@+id/txtLogin"
<<<<<<< HEAD
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="140dp"
        android:layout_marginTop="140dp"
        android:layout_marginEnd="140dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:textSize="40sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/white"/>

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
=======
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="176dp"
        android:layout_marginTop="179dp"
        android:text="@string/login"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
>>>>>>> 001bb7893a3c1efecaa0965f7bfaf8f8e933c7cd
        android:layout_marginStart="20dp"
        android:layout_marginTop="250dp"
        android:ems="10"
        android:inputType="textEmailAddress"
<<<<<<< HEAD
        android:hint="@string/email"
        android:padding="10dp"
        android:background="@color/white"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="310dp"
        android:ems="10"
        android:inputType="textPassword"
        android:background="@color/white"
        android:padding="10dp"
=======
        android:hint="@string/email" />

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="300dp"
        android:ems="10"
        android:inputType="textPassword"
>>>>>>> 001bb7893a3c1efecaa0965f7bfaf8f8e933c7cd
        android:hint="@string/password" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="150dp"
        android:layout_marginEnd="150dp"
        android:layout_marginTop="400dp"
        android:text="@string/login"
        android:textSize="16sp"/>
<<<<<<< HEAD

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:layout_marginEnd="140dp"
        android:layout_marginStart="140dp"
        android:layout_marginTop="500dp"
        android:textSize="16sp"/>

=======
    
>>>>>>> 001bb7893a3c1efecaa0965f7bfaf8f8e933c7cd
</RelativeLayout>